# parsable-hs

./: CHANGELOG.md  README.md  cabal.project  hie.yaml  parsable.cabal
.github/workflows/: haskell.yml
src/Data/: Parsable.hs
test/: Main.hs
