cabal-version:      3.0
name:               parsable
version:            0.1.0.0
synopsis:           Parsable and Printable classes

-- description:
homepage:           https://github.com/hololeap/parsable-hs
bug-reports:        https://github.com/hololeap/parsable-hs/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- copyright:
category:           Text
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/parsable-hs

common all
    ghc-options:         -Weverything
                         -Wno-missing-exported-signatures
                         -Wno-missing-import-lists
                         -Wno-missed-specialisations
                         -Wno-all-missed-specialisations
                         -Wno-unsafe
                         -Wno-safe
                         -Wno-missing-safe-haskell-mode
                         -Wno-missing-local-signatures
                         -Wno-implicit-prelude
                         -Wno-prepositive-qualified-module
                         -Wno-missing-deriving-strategies
                         -Wno-deriving-typeable
                         -foptimal-applicative-do

library
    import: all
    exposed-modules:
        , Data.Parsable

    other-extensions:
        , ConstrainedClassMethods
        , DefaultSignatures
        , DeriveTraversable
        , FlexibleContexts
        , FlexibleInstances
        , LambdaCase
        , TypeFamilies

    build-depends:
        , base >=4.13 && <5
        , parsec >=3.1.14.0
        , text >=1.2.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
