cabal-version:      3.0
name:               parsable
version:            0.1.0.0
synopsis:           Parsable and Printable classes

tested-with:        GHC == { 8.8.4, 8.10.7, 9.0.2, 9.2.2 }

-- description:
homepage:           https://github.com/hololeap/parsable-hs
bug-reports:        https://github.com/hololeap/parsable-hs/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

copyright:          Copyright (C) 2022 hololeap
category:           Text
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/parsable-hs
    branch:         main

flag pedantic
    description:    Turn on -Werror
    default:        False
    manual:         True

common all
    ghc-options:         -Wall
                         -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:     -Werror

library
    import: all
    exposed-modules:
        , Data.Parsable


    other-extensions:
        , ConstrainedClassMethods
        , DefaultSignatures
        , DeriveTraversable
        , FlexibleContexts
        , FlexibleInstances
        , LambdaCase
        , TypeFamilies

    build-depends:
        , base >=4.13 && <5
        , parsec >=3.1.14.0
        , semigroupoids-slim
        , text >=1.2.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

    other-extensions:
        , ConstrainedClassMethods
        , DefaultSignatures
        , DeriveGeneric
        , DeriveTraversable
        , DerivingVia
        , FlexibleContexts
        , FlexibleInstances
        , GeneralizedNewtypeDeriving
        , LambdaCase
        , ScopedTypeVariables
        , TypeApplications
        , TypeFamilies

test-suite parsable-test
    import: all
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        , base
        , parsable
        , QuickCheck
        , quickcheck-classes
        , semigroupoids-slim
        , semigroupoids >=5.3.6

    other-extensions:
        , DerivingStrategies
        , InstanceSigs
        , TypeApplications
